# jornada-bootcamp-edu

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
aula1/: README.md  aula1.py
aula17/: desafio.db  desafio.py  main.py  meubanco.db
aula18/: main.py
aula18/src/: controller.py  db.py  main.py  models.py  pokemon.db  schema.py
aula19/src/: database.py  ecomerce.db  main.py  models.py  schema.py
aula2/: README.md  aula2.py
aula20/backend/: models.py  router.py  schemas.py
aula3/: aula3.py
aula4/: aula4.py
aula6/: README.md
aula7/: aula7.py  desafio.py  etl.py  main.py
aula7/data/: vendas.csv
aula8/: etl.py
aula9/: README.md  etl.py  pipeline.py  utils.py
