[project]
name = "jornada-bootcamp-edu"
version = "1.0"
description = "projeto de estudos da jornada de dados com foco em python para engenheiro de dados"
authors = [
    {name = "Rodrigo Silva dataforge.br@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandera (>=0.30.1,<0.31.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastparquet (>=2026.3.0,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
